--- a/.devcontainer/06_dom/one.html
+++ b/.devcontainer/06_dom/one.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM PRACTISE</title>
+    <style>
+        .bg-black
+        {
+            background-color: #212121;
+            color:#fff;
+        }
+    </style>
 </head>
 <body>
     <div class="bg-black">
         <h1 class="heading">DOM LEARNING</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nam facilis libero officiis corporis quisquam. Deleniti minima nobis fuga. Quis ut molestias amet aperiam fugit sequi minus fugiat, ducimus iste?</p>
+        <h2>hello</h2>
+        <h3>hhd</h3>
+        <h4>bjubujd</h4>
     </div>
+<div class="name">
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, odio.</P>
+</div>
 </body>
 </html>
