--- a/.devcontainer/06_dom/one.html
+++ b/.devcontainer/06_dom/one.html
@@ -3,36 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM PRACTISE</title>
-    <style>
-        .bg-black
-        {
-            background-color: #212121;
-            color:#fff;
-        }
-    </style>
+<style>
+    .bg-color
+    {
+        background-color: #212121;
+        color:#fff;
+    }
+</style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM LEARNING</h1>
-        <h2>hello</h2>
-        <h3>hhd</h3>
-        <h3>hello ho are you
-            
-        </h3>
-        <h4>bjubujd</h4>
+<body class="bg-color">
+    <div>
+        <h1 id="title" class="heading">DOM LEARNING</h1>
+        <h2>one</h2>
+        <h2>two</h2>
+        <h2>three</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, aliquid?</p>
+        <input type="password">
+        <ul>
+            <li class="list-item">one<li>
+            <li class="list-item">two<li>
+            <li class="list-item">three<li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 <div class="name">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam sapiente quibusdam id libero a? Provident expedita ex possimus quasi tempore voluptate dolorum sunt ducimus, harum est asperiores, aspernatur dolore voluptates.
-    Provident hic vero et minus. Provident atque aliquid, et aperiam neque explicabo dolor esse asperiores aliquam quibusdam? Earum enim veritatis a molestias nulla hic non ullam rem, delectus, sapiente consequuntur.
-    Sapiente quod enim quisquam corrupti totam odio provident amet veniam sequi eius temporibus recusandae nulla aspernatur, inventore dolore maiores libero perspiciatis perferendis ducimus sed ipsum! Id officia similique amet nulla.
-    Quod molestias deserunt sequi, dolorum nesciunt facilis placeat, explicabo odio soluta error impedit provident veritatis quam ratione nisi voluptas aut numquam debitis nemo, dicta mollitia quibusdam libero commodi enim. Aliquam.
-    Ullam sequi debitis minima corrupti enim consectetur quae, obcaecati atque facilis dolorem repellendus natus sed, deserunt est temporibus expedita asperiores, molestiae odio dolor consequatur. Natus ipsa tenetur voluptatibus odio atque!
-    Nisi libero, excepturi expedita quasi deserunt suscipit adipisci error aut quae nesciunt itaque doloribus, doloremque at blanditiis quisquam laudantium fugit unde praesentium. Architecto ea nesciunt, beatae aspernatur eveniet qui iusto.
-    Dolor, porro veritatis. Recusandae possimus voluptatum esse adipisci excepturi voluptas sapiente! Ea doloribus aliquam fugiat recusandae, blanditiis officiis rem nesciunt quo praesentium similique repellat facilis expedita mollitia beatae voluptatum ad.
-    Totam molestias nesciunt iste quia nemo nulla quasi at? Debitis sequi soluta tenetur fugiat, ipsum saepe molestiae, accusantium quaerat repellendus consequatur cupiditate temporibus dolorum maxime blanditiis excepturi unde quae exercitationem!
-    Aperiam at aliquam veritatis explicabo laboriosam perferendis sint accusantium fugit blanditiis pariatur esse nihil quod voluptas, excepturi, dolores quo in! Ab consequatur delectus enim cum repudiandae quisquam ratione, voluptas saepe.
-    A eaque in commodi fugit, voluptatibus veniam asperiores? Sunt eum ea totam error repellat. Quas voluptatum distinctio est voluptate, accusamus, et esse eligendi eos laborum delectus, ipsa corporis! Quidem, blanditiis?</p>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, odio.</P>
+    
 </div>
 </body>
 </html>
